# PPChem_Project

./: .gitignore  LICENSE  README.md  Raw_reactionsA.rtf  RetroGSF_functions.py  env.yml  generation_images.py  jsppkcamarchepas.yml  projet_report.ipynb  pyproject.toml
Diego's/: Aizynfinder_attempts.ipynb  Gemini_attempt.py  database_attempts.ipynb  extract.csv  rxn-insight_attempts.ipynb
Lea's/: app.py  extract.csv  extract_solvents.py  extract_solvents_all_solvents.py  extract_with_all_solvents.csv  extract_with_solvents.csv  solvents_smiles.csv
Witek's/: Untitled-1.ipynb  fake_retro.py  retro.py
Witek's/ranking/with_names/: SHE_data_without_smiles.csv  solvant_ranking_name.py  test_solvant_ranking_name.py
Witek's/ranking/with_smiles/: solvant_ranking_smile.py  test_solvant_ranking_smile.py
Witek's/retrosynthesis/: fake_retro.py
