[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "*NAME OF PACKAGE*" # name of package
version = "0.0.1"
dependencies = [
    "rdkit",
    "numpy == 2.0.1",
    "rxn_insight",
    "google-generativeai",
    "aizynthfinder",
    "python-dotenv",
    ]
authors = [
  {name = "Diego Meraldi", email = "diego.meraldi@epfl.ch"},
  {name = "Witek Huguenin-Dezot", email = "witek.huguenin-dezot@epfl.ch"},
  {name = "Lea Lombard"}, {email = "lea.lombard@epfl.ch"}]
description = "Lovely Spam! Wonderful Spam!" # Description of package

license = "MIT"

readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Repository = "https://github.com/WitekHD/PPChem_Project.git" # name of package


[tool.hatch.build.targets.wheel]
packages = ["src/*NAME OF PACKAGE*"] # name of package
